[sprint_2] find books or authors by genres and improvements
