# src/main/java/kz/halykacademy/bookstore/controllers/BookController.java
@@ -2,6 +2,7 @@ package kz.halykacademy.bookstore.controllers;
 
 import kz.halykacademy.bookstore.dto.BookDTO;
 import kz.halykacademy.bookstore.models.Book;
+import kz.halykacademy.bookstore.models.Genre;
 import kz.halykacademy.bookstore.services.BookService;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -25,7 +26,7 @@ public class BookController {
     }
 
     @GetMapping
-    public List<BookDTO> getAll(){
+    public List<BookDTO> getAll() {
         return bookService
                 .readAllBooks()
                 .stream()
@@ -34,42 +35,47 @@ public class BookController {
     }
 
     @GetMapping("/{id}")
-    public BookDTO getById(@PathVariable(name = "id") Long id){
-       return convertToBookDTO(bookService.readById(id));
+    public BookDTO getById(@PathVariable(name = "id") Long id) {
+        return convertToBookDTO(bookService.readById(id));
     }
 
     @PostMapping
-    public ResponseEntity post(@RequestBody BookDTO bookDTO){
+    public ResponseEntity post(@RequestBody BookDTO bookDTO) {
         bookService.create(convertToBook(bookDTO));
 
         return ResponseEntity.ok(HttpStatus.OK);
     }
 
     @PutMapping
-    public ResponseEntity put(@RequestBody BookDTO bookDTO){
+    public ResponseEntity put(@RequestBody BookDTO bookDTO) {
         bookService.update(bookDTO.getId(), convertToBook(bookDTO));
 
         return ResponseEntity.ok(HttpStatus.OK);
     }
 
     @DeleteMapping("/{id}")
-    public ResponseEntity delete(@PathVariable(name = "id") Long id){
+    public ResponseEntity delete(@PathVariable(name = "id") Long id) {
         bookService.delete(id);
 
         return ResponseEntity.ok(HttpStatus.OK);
     }
 
-    private BookDTO convertToBookDTO(Book book){
+    private BookDTO convertToBookDTO(Book book) {
         return modelMapper.map(book, BookDTO.class);
     }
 
-    private Book convertToBook(BookDTO bookDTO){
+    private Book convertToBook(BookDTO bookDTO) {
         return modelMapper.map(bookDTO, Book.class);
     }
 
     @GetMapping("/{title}")
-    public List<Book> getByTitle(@PathVariable(name = "title") String title){
+    public List<Book> getByTitle(@PathVariable(name = "title") String title) {
         return bookService.findByTitle(title);
+    }
+
+    @GetMapping("/{genres}")
+    public List<Book> getByGenre(@PathVariable(name = "genres") List<Genre> genres) {
+        return bookService.findByGenres(genres);
     }
 
 }
