# src/main/java/kz/halykacademy/bookstore/models/Genre.java
@@ -1,8 +1,23 @@
 package kz.halykacademy.bookstore.models;
 
+import javax.persistence.*;
+
+@Entity
+@Table(name = "genre")
 public class Genre {
+    @Id
+    @Column(name = "id")
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
     private Long id;
+
+    @Column(name = "name")
     private String name;
+
+    @ManyToOne
+    private Author author;
+
+    @ManyToOne
+    private Book book;
 
     public Genre() {
     }
@@ -25,5 +40,21 @@ public class Genre {
 
     public void setName(String name) {
         this.name = name;
+    }
+
+    public Author getAuthor() {
+        return author;
+    }
+
+    public void setAuthor(Author author) {
+        this.author = author;
+    }
+
+    public Book getBook() {
+        return book;
+    }
+
+    public void setBook(Book book) {
+        this.book = book;
     }
 }
